2007-11-19  Guillem Jover  <guillem@debian.org>

	* pkg-deb/build.c (arbitrary_fields): Add Package-Type,
	Subarchitecture, Kernel-Version and Installer-Menu-Item.
	* scripts/dpkg-scanpackages.pl (@fieldpri): Likewise.
	(%field_case): Add type argument.
	(usage): Document --type argument, and mark --udeb as obsolete.
	* scripts/dpkg-gencontrol.pl: Parse Package-Type, Subarchitecture,
	Kernel-Version and Installer-Menu-Item from control file binary
	stanza. Warn if udeb specific fields are used on non-udeb packages.
	Add package with proper extension to the files list file.
	(@control_fields): Add Package-Type, Subarchitecture, Kernel-Version
	and Installer-Menu-Item.
	($package_type): New variable.
	* scripts/dpkg-genchanges.pl: Ignore Package-Type, Subarchitecture,
	Kernel-Version and Installer-Menu-Item fields.
	* scripts/dpkg-source.pl: Likewise.

2007-11-15  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Arch.pm (read_cputable): Force a sane input record
	separator.
	(read_ostable): Likewise.
	(read_triplettable): Likewise.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/Makefile.am (clean): Set PERL5LIB to force use of shipped
	modules instead of system ones.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Move host and build arch detection
	to ...
	* scripts/Dpkg/Arch.pm (get_host_arch): ... here.
	(get_build_arch, get_gcc_host_gnu_type): Likewise. New function.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Wrap long strings for die calls
	at less than 80 chars.

2007-11-04  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Arch.pm (debarch_to_gnutriplet): New function.
	(gnutriplet_to_debarch): Likewise.
	* scripts/dpkg-architecture.pl: Use debarch_to_gnutriplet and
	gnutriplet_to_debarch instead of nested calls to
	debtriplet_to_gnutriplet and debarch_to_debtriplet,
	debtriplet_to_debarch and gnutriplet_to_debtriplet.
