@@ -1,5 +1,11 @@
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-source.pl: Use %dep_field_type for the union option
+	to Dpkg::Deps::parse, and use capit() to normalize the field names,
+	instead of hardcoding them.
+
+2007-11-19  Guillem Jover  <guillem@debian.org>
+
 	* pkg-deb/build.c (arbitrary_fields): Add Package-Type,
 	Subarchitecture, Kernel-Version and Installer-Menu-Item.
 	* scripts/dpkg-scanpackages.pl (@fieldpri): Likewise.
